src/types/tests/snapshots/tgbot__types__tests__poll__send_quiz-3.snap
---
source: src/types/tests/poll.rs
expression: actual_data
---
{
  "chat_id": "1",
  "correct_option_ids": [
    0
  ],
  "options": [
    {
      "text": "X"
    }
  ],
  "question": "Q",
  "question_parse_mode": "MarkdownV2"
}
