src/types/tests/snapshots/tgbot__types__tests__poll__send_quiz-4.snap
---
source: src/types/tests/poll.rs
expression: actual_data
---
{
  "allow_adding_options": "true",
  "allow_paid_broadcast": "true",
  "allows_multiple_answers": "true",
  "allows_revoting": "false",
  "business_connection_id": "id",
  "chat_id": "1",
  "correct_option_ids": [
    0
  ],
  "country_codes": [
    "NL"
  ],
  "description": "test",
  "description_parse_mode": "MarkdownV2",
  "disable_notification": "true",
  "explanation": "test",
  "explanation_media": {
    "latitude": 1.0,
    "longitude": 2.0,
    "type": "location"
  },
  "hide_results_until_closes": "true",
  "is_anonymous": "false",
  "is_closed": "false",
  "members_only": "true",
  "message_effect_id": "effect-id",
  "message_thread_id": "1",
  "options": [
    {
      "text": "O1"
    },
    {
      "text": "O2"
    }
  ],
  "protect_content": "true",
  "question": "Q",
  "reply_markup": {
    "force_reply": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "shuffle_options": "true"
}
