src/types/tests/snapshots/tgbot__types__tests__poll__stop_poll.snap
---
source: src/types/tests/poll.rs
expression: actual_data
---
{
  "business_connection_id": "c-id",
  "chat_id": 1,
  "message_id": 2,
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "text",
          "url": "url"
        }
      ]
    ]
  }
}
